fixes, add 9 layers (total 10)

--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -23,5 +23,41 @@
                 "SELECT osm_id,name,waterway,way AS __geometry__ FROM rul.rivers"
 		    ]
         }}}
-    }
+    },{
+    "water": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
+      "kwargs": { "clip": true,"dbinfo": {
+      "host": "osm.cxgbat4jt7jg.eu-west-1.rds.amazonaws.com", "database": "osm", "user":"osm", "password":"ttwest45" }, "queries": [
+        "SELECT osm_id,name,water,way AS __geometry__ FROM rul.water"  ]}}}},{
+    "forest": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
+      "kwargs": { "clip": true,"dbinfo": {
+      "host": "osm.cxgbat4jt7jg.eu-west-1.rds.amazonaws.com", "database": "osm", "user":"osm", "password":"ttwest45" }, "queries": [
+        "SELECT osm_id,name,way AS __geometry__ FROM rul.forest"  ]}}}},{
+    "buildings": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
+      "kwargs": { "clip": true,"dbinfo": {
+      "host": "osm.cxgbat4jt7jg.eu-west-1.rds.amazonaws.com", "database": "osm", "user":"osm", "password":"ttwest45" }, "queries": [
+        "SELECT osm_id,name,way AS __geometry__ FROM rul.buildings"  ]}}}},{
+    "roads": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
+      "kwargs": { "clip": true,"dbinfo": {
+      "host": "osm.cxgbat4jt7jg.eu-west-1.rds.amazonaws.com", "database": "osm", "user":"osm", "password":"ttwest45" }, "queries": [
+        "SELECT osm_id,name,highway,way AS __geometry__ FROM rul.roads"  ]}}}},{
+    "railway": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
+      "kwargs": { "clip": true,"dbinfo": {
+      "host": "osm.cxgbat4jt7jg.eu-west-1.rds.amazonaws.com", "database": "osm", "user":"osm", "password":"ttwest45" }, "queries": [
+        "SELECT osm_id,name,railway,way AS __geometry__ FROM rul.railway"  ]}}}},{
+    "man_made": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
+      "kwargs": { "clip": true,"dbinfo": {
+      "host": "osm.cxgbat4jt7jg.eu-west-1.rds.amazonaws.com", "database": "osm", "user":"osm", "password":"ttwest45" }, "queries": [
+        "SELECT osm_id,name,man_made,way AS __geometry__ FROM rul.man_made"  ]}}}},{
+    "power_generator": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
+      "kwargs": { "clip": true,"dbinfo": {
+      "host": "osm.cxgbat4jt7jg.eu-west-1.rds.amazonaws.com", "database": "osm", "user":"osm", "password":"ttwest45" }, "queries": [
+        "SELECT osm_id,name,power,"generator:source",way AS __geometry__ FROM rul.power_generator"  ]}}}},{
+    "power_station": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
+      "kwargs": { "clip": true,"dbinfo": {
+      "host": "osm.cxgbat4jt7jg.eu-west-1.rds.amazonaws.com", "database": "osm", "user":"osm", "password":"ttwest45" }, "queries": [
+        "SELECT osm_id,name,power,way AS __geometry__ FROM rul.power_station"  ]}}}},{
+    "power_line": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
+      "kwargs": { "clip": true,"dbinfo": {
+      "host": "osm.cxgbat4jt7jg.eu-west-1.rds.amazonaws.com", "database": "osm", "user":"osm", "password":"ttwest45" }, "queries": [
+        "SELECT osm_id,name,power,way AS __geometry__ FROM rul.power_line"  ]}}}}
 }
