--- a/nginx-rul.conf
+++ b/nginx-rul.conf
@@ -2,7 +2,7 @@
 server {
 	# serve on amazon
 	listen 80;
-	server_name varik.ru;
+	server_name 54.72.184.190;
 
 	# Forward /db/* to Gunicorn. Buffer to RAM aggressively.
 	location /db {
