--- a/nginx-rul.conf
+++ b/nginx-rul.conf
@@ -4,8 +4,8 @@ server {
 	listen 80;
 	server_name 54.72.184.190;
 
-	# Forward /db/* to Gunicorn. Buffer to RAM aggressively.
-	location /db {
+	# Forward /rivers/* to Gunicorn. Buffer to RAM aggressively.
+	location /rivers {
 	    proxy_pass http://localhost:8000;
 	    proxy_buffering on;
 	    proxy_buffers 32 16k;
