--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -23,49 +23,49 @@
                 "SELECT osm_id,name,waterway,way AS __geometry__ FROM rul.rivers"
 		    ]
         }}}
-    },{
+    },
     "water": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
       "kwargs": { "clip": true,"dbinfo": {
       "host": "_host_", "database": "osm", "user":"osm", "password":"_password_" }, "queries": [
-        "SELECT osm_id,name,water,way AS __geometry__ FROM rul.water"  ]}}}},{
+        "SELECT osm_id,name,water,way AS __geometry__ FROM rul.water"  ]}}},{
     "forest": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
       "kwargs": { "clip": true,"dbinfo": {
       "host": "_host_", "database": "osm", "user":"osm", "password":"_password_" }, "queries": [
-        "SELECT osm_id,name,way AS __geometry__ FROM rul.forest"  ]}}}},{
+        "SELECT osm_id,name,way AS __geometry__ FROM rul.forest"  ]}}},
     "veg": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
       "kwargs": { "clip": true,"dbinfo": {
       "host": "_host_", "database": "osm", "user":"osm", "password":"_password_" }, "queries": [
-        "SELECT type,way AS __geometry__ FROM rul.veg"  ]}}}},{
+        "SELECT type,way AS __geometry__ FROM rul.veg"  ]}}},
     "elevation": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
       "kwargs": { "clip": true,"dbinfo": {
       "host": "_host_", "database": "osm", "user":"osm", "password":"_password_" }, "queries": [
-        "SELECT height,way AS __geometry__ FROM rul.elevation"  ]}}}},{
+        "SELECT height,way AS __geometry__ FROM rul.elevation"  ]}}},
     "buildings": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
       "kwargs": { "clip": true,"dbinfo": {
       "host": "_host_", "database": "osm", "user":"osm", "password":"_password_" }, "queries": [
-        "SELECT osm_id,name,way AS __geometry__ FROM rul.buildings"  ]}}}},{
+        "SELECT osm_id,name,way AS __geometry__ FROM rul.buildings"  ]}}},
     "roads": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
       "kwargs": { "clip": true,"dbinfo": {
       "host": "_host_", "database": "osm", "user":"osm", "password":"_password_" }, "queries": [
-        "SELECT osm_id,name,highway,way AS __geometry__ FROM rul.roads"  ]}}}},{
+        "SELECT osm_id,name,highway,way AS __geometry__ FROM rul.roads"  ]}}},
     "railway": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
       "kwargs": { "clip": true,"dbinfo": {
       "host": "_host_", "database": "osm", "user":"osm", "password":"_password_" }, "queries": [
-        "SELECT osm_id,name,railway,way AS __geometry__ FROM rul.railway"  ]}}}},{
+        "SELECT osm_id,name,railway,way AS __geometry__ FROM rul.railway"  ]}}},
     "man_made": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
       "kwargs": { "clip": true,"dbinfo": {
       "host": "_host_", "database": "osm", "user":"osm", "password":"_password_" }, "queries": [
-        "SELECT osm_id,name,man_made,way AS __geometry__ FROM rul.man_made"  ]}}}},{
+        "SELECT osm_id,name,man_made,way AS __geometry__ FROM rul.man_made"  ]}}},
     "power_generator": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
       "kwargs": { "clip": true,"dbinfo": {
       "host": "_host_", "database": "osm", "user":"osm", "password":"_password_" }, "queries": [
-        "SELECT osm_id,name,power,"generator:source",way AS __geometry__ FROM rul.power_generator"  ]}}}},{
+        "SELECT osm_id,name,power,"generator:source",way AS __geometry__ FROM rul.power_generator"  ]}}},
     "power_station": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
       "kwargs": { "clip": true,"dbinfo": {
       "host": "_host_", "database": "osm", "user":"osm", "password":"_password_" }, "queries": [
-        "SELECT osm_id,name,power,way AS __geometry__ FROM rul.power_station"  ]}}}},{
+        "SELECT osm_id,name,power,way AS __geometry__ FROM rul.power_station"  ]}}},
     "power_line": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
       "kwargs": { "clip": true,"dbinfo": {
       "host": "_host_", "database": "osm", "user":"osm", "password":"_password_" }, "queries": [
-        "SELECT osm_id,name,power,way AS __geometry__ FROM rul.power_line"  ]}}}}
+        "SELECT osm_id,name,power,way AS __geometry__ FROM rul.power_line"  ]}}}
 }
