--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -27,7 +27,7 @@
     "water": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
       "kwargs": { "clip": true,"dbinfo": {
       "host": "_host_", "database": "osm", "user":"osm", "password":"_password_" }, "queries": [
-        "SELECT osm_id,name,water,way AS __geometry__ FROM rul.water"  ]}}},{
+        "SELECT osm_id,name,water,way AS __geometry__ FROM rul.water"  ]}}},
     "forest": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
       "kwargs": { "clip": true,"dbinfo": {
       "host": "_host_", "database": "osm", "user":"osm", "password":"_password_" }, "queries": [
