--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -59,7 +59,7 @@
     "power_generator": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
       "kwargs": { "clip": true,"dbinfo": {
       "host": "_host_", "database": "osm", "user":"osm", "password":"_password_" }, "queries": [
-        "SELECT osm_id,name,power,"generator:source",way AS __geometry__ FROM rul.power_generator"  ]}}},
+        "SELECT osm_id,name,power,\"generator:source\",way AS __geometry__ FROM rul.power_generator"  ]}}},
     "power_station": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
       "kwargs": { "clip": true,"dbinfo": {
       "host": "_host_", "database": "osm", "user":"osm", "password":"_password_" }, "queries": [
