--- a/nginx-rul.conf
+++ b/nginx-rul.conf
@@ -14,7 +14,7 @@ server {
 	# Ensure clients know to cache responses
 	expires 30d;
 
-	root /etc/nginx/sites-enabled/rul;
+	root /var/www/rul;
 	# Ensure good gzip compression for the JSON tiles
 	gzip  on;
 	gzip_types text/json application/json;
