--- a/nginx-rul.conf
+++ b/nginx-rul.conf
@@ -14,7 +14,8 @@ server {
 	# Ensure clients know to cache responses
 	expires 30d;
 
-	root /var/www/rul;
+	root /var/www/rul/public_html;
+	index.html
 	# Ensure good gzip compression for the JSON tiles
 	gzip  on;
 	gzip_types text/json application/json;
@@ -24,6 +25,6 @@ server {
             stub_status on;
             access_log off;
             allow 127.0.0.1;
-            deny all;
+            allow all;
 	}
 }
