--- a/nginx-rul.conf
+++ b/nginx-rul.conf
@@ -15,6 +15,7 @@ server {
 	expires 30d;
 
 	root /var/www/rul/public_html;
+	index index.htmlж
 
 	# Ensure good gzip compression for the JSON tiles
 	gzip  on;
