--- a/nginx-rul.conf
+++ b/nginx-rul.conf
@@ -15,7 +15,7 @@ server {
 	expires 30d;
 
 	root /var/www/rul/public_html;
-	index index.htmlж
+	index index.html;
 
 	# Ensure good gzip compression for the JSON tiles
 	gzip  on;
@@ -26,6 +26,6 @@ server {
             stub_status on;
             access_log off;
             allow 127.0.0.1;
-            allow all;
+            deny all;
 	}
 }
