--- a/nginx-rul.conf
+++ b/nginx-rul.conf
@@ -3,12 +3,17 @@ server {
 	# serve on amazon
 	listen 80;
 	server_name 54.72.184.190;
- 
+
 	# Forward /rivers/* to Gunicorn. Buffer to RAM aggressively.
 	location /rivers {
-	    proxy_pass http://localhost:8000;
-	    proxy_buffering on;
-	    proxy_buffers 32 16k;
+			proxy_pass http://localhost:8000;
+			proxy_buffering on;
+			proxy_buffers 32 16k;
+	}
+	location /water {
+			proxy_pass http://localhost:8000;
+			proxy_buffering on;
+			proxy_buffers 32 16k;
 	}
 
 	# Ensure clients know to cache responses
