--- a/nginx-rul.conf
+++ b/nginx-rul.conf
@@ -1,23 +1,30 @@
-# Nginx configuration for proxying Gunicorn. Tested with Ubuntu 12.04
+
+upstream tilestache {
+   server 127.0.0.1:8000;
+}
+
 server {
 	# serve on amazon
 	listen 80;
 	server_name 54.72.184.190;
 
+
+
+
 	# Forward to Gunicorn. Buffer to RAM aggressively.
 	location /tiles {
-			proxy_pass http://localhost:8000;   
+			proxy_pass http://tilestache/;
 			proxy_buffering on;
 			proxy_buffers 32 16k;
 	}
 
-	# Ensure clients know to cache responses
+	location / {
+        root /var/www/rul/public_html;
+        index index.html;
+    }
+}
+
 	expires 30d;
-
-	root /var/www/rul/public_html;
-	index index.html;
-
-	# Ensure good gzip compression for the JSON tiles
 	gzip  on;
 	gzip_types text/json application/json;
 	gzip_comp_level 6;
