--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -1,4 +1,4 @@
- {    
+ {
     "cache": {
         "name": "Disk",
         "path": "/tmp/stache",
@@ -20,7 +20,7 @@
                     },
 			"queries":
       		[
-                "SELECT osm_id,name,waterway,way AS __geometry__ FROM rul.rivers"
+                "SELECT id,osm_id,name,waterway,way AS __geometry__ FROM rul.rivers"
 		    ]
         }}}
     ,
