--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -47,7 +47,7 @@
     "roads": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
       "kwargs": { "clip": true,"dbinfo": {
       "host": "_host_", "database": "osm", "user":"osm", "password":"_password_" }, "queries": [
-        "SELECT osm_id,name,highway,way AS __geometry__ FROM rul.roads"  ]}}},
+        "SELECT id,osm_id,name,highway,way AS __geometry__ FROM rul.roads"  ]}}},
     "railway": {"allowed origin": "*", "provider": { "class": "TileStache.Goodies.VecTiles:Provider",
       "kwargs": { "clip": true,"dbinfo": {
       "host": "_host_", "database": "osm", "user":"osm", "password":"_password_" }, "queries": [
