--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -4,7 +4,7 @@
         "path": "/tmp/stache",
         "dirs": "portable"
     }, 
-    "logging": "warning",
+    "logging": "debug",
     "layers": {
         "rivers": {
             "allowed origin": "*",
