--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -12,7 +12,7 @@
                 "class": "TileStache.Goodies.VecTiles:Provider",
                 "kwargs": {
                     "clip": true,
-                    "simplify": 0.5;
+                    "simplify": 0.5,
                     "dbinfo": {
                         "host": "_host_",
                         "database": "osm",
