--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -4,7 +4,7 @@
         "path": "/tmp/stache",
         "dirs": "portable"
     }, 
-    "logging": "debug",
+    "logging": "warning",
     "layers": {
         "rivers": {
             "allowed origin": "*",
@@ -12,7 +12,7 @@
                 "class": "TileStache.Goodies.VecTiles:Provider",
                 "kwargs": {
                     "clip": true,
-                    "simplify": 0.5,
+                    "simplify": 0,
                     "dbinfo": {
                         "host": "_host_",
                         "database": "osm",
@@ -21,7 +21,17 @@
                     },
 			"queries":
       		[
-                "SELECT id, osm_id,name,waterway,way AS __geometry__ FROM rul.rivers"
+                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z1",
+                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z1",
+                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z2",
+                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z3",
+                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z4",
+                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z5",
+                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z6",
+                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z7",
+                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z8",
+                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z9",
+                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z10",
 		    ]
         }}}
     ,        
