--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -31,7 +31,7 @@
                 "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z7",
                 "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z8",
                 "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z9",
-                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z10",
+                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z10"
 		    ]
         }}}
     ,        
