--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -21,17 +21,17 @@
                     },
 			"queries":
       		[
-                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z1",
-                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z1",
-                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z2",
-                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z3",
-                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z4",
-                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z5",
-                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z6",
-                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z7",
-                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z8",
-                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z9",
-                "SELECT id as __id__,name,way AS __geometry__ FROM rul.rivers_z10"
+                "SELECT osm_id as __id__,name,way AS __geometry__ FROM rul.rivers_z1",
+                "SELECT osm_id as __id__,name,way AS __geometry__ FROM rul.rivers_z1",
+                "SELECT osm_id as __id__,name,way AS __geometry__ FROM rul.rivers_z2",
+                "SELECT osm_id as __id__,name,way AS __geometry__ FROM rul.rivers_z3",
+                "SELECT osm_id as __id__,name,way AS __geometry__ FROM rul.rivers_z4",
+                "SELECT osm_id as __id__,name,way AS __geometry__ FROM rul.rivers_z5",
+                "SELECT osm_id as __id__,name,way AS __geometry__ FROM rul.rivers_z6",
+                "SELECT osm_id as __id__,name,way AS __geometry__ FROM rul.rivers_z7",
+                "SELECT osm_id as __id__,name,way AS __geometry__ FROM rul.rivers_z8",
+                "SELECT osm_id as __id__,name,way AS __geometry__ FROM rul.rivers_z9",
+                "SELECT osm_id as __id__,name,way AS __geometry__ FROM rul.rivers_z10"
 		    ]
         }}}
     ,        
