--- a/nginx-rul.conf
+++ b/nginx-rul.conf
@@ -13,6 +13,10 @@ server {
         root /var/www/rul/public_html;
         index index.html;
     }
+	location /gazprom {
+        root /var/www/gazprom;
+        index index.html;
+    }
 	location /tiles {
 			proxy_pass http://tilestache/;
 			proxy_buffering on;
