--- a/nginx-rul.conf
+++ b/nginx-rul.conf
@@ -4,28 +4,27 @@ upstream tilestache {
 }
 
 server {
-	# serve on amazon
-	listen 80;
-	server_name 54.72.184.190;
+        # serve on amazon
+        listen 80;
+        server_name 54.72.184.190;
 
-	# Forward to Gunicorn. Buffer to RAM aggressively.
-	location /gazprom {
-        root /var/www/gazprom;
+        # Forward to Gunicorn. Buffer to RAM aggressively.
+#       location /gazprom {
+        root /var/www;
         index index.html;
-    }
-	location / {
-        root /var/www/rul/public_html;
-        index index.html;
-    }
-	location /tiles {
-			proxy_pass http://tilestache/;
-			proxy_buffering on;
-			proxy_buffers 32 16k;
-	}
-       
+#    }
+#       location / {
+#        root /var/www/gazprom;
+#        index index.html;
+#    }
+        location /gazprom {try_files $uri $uri/ =404;}
+        location /tiles {
+                        proxy_pass http://tilestache/;
+                        proxy_buffering on;
+                        proxy_buffers 32 16k;
+        }
 
-	expires 30d;
-	gzip  on;
+   	gzip  on;
 	gzip_types text/json application/json;
 	gzip_comp_level 6;
 
